--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             <div class="header-content-inner">
                 <h1>Jamocracy</h1>
                 <br><br>
-                <p>If you've never used Jamocracy before click 'Get Started' and we'll quickly show you how it works, otherwise go ahead and make your playlists collaberative</p>
+                <p>If you've never used Jamocracy before click 'Learn More' and we'll quickly show you how it works, otherwise go ahead and make your playlists collaberative</p>
                 <a href="/login" class="btn btn-primary btn-xl page-scroll">Build Playlist</a><br><br><br>
                 <a href="#firstStop" class="btn btn-primary btn-xl page-scroll">Learn More</a>
             </div>
@@ -175,7 +175,7 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <a href="#" id="back" class="btn btn-default btn-xl wow ">Get Started</a>
+                <a href="#" id="back" class="btn btn-default btn-xl wow ">Top</a>
             </div>
         </div>
     </aside>
@@ -188,11 +188,11 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Anything you think we should hear? Questions, bugs, unrelenting praise for this incredible serice? All are welcome.</p>
+                    <p>Anything you think we should hear? Questions, bugs, unrelenting praise for this incredible service? All are welcome.</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow " data-wow-delay=".1s"></i>
-                    <p><a href="mailto:rbrannin@nd.edu,dkerriga@nd.edu,mkdrumdi1@nd.edu">team@jamocracy.com</a></p>
+                    <p><a href="mailto:jamocracy@gmail.com">jamocracy@gmail.com</a></p>
                 </div>
             </div>
         </div>
