better button on info

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
                         <span>We ensure your social gathering is both democratic and #bumpin</span><br>
                     </div>
                     <br>
-                    <a href="#stepTwo" class="btn btn-default btn-xl wow page-scroll">Got it</a>
+                    <a href="#stepTwo" class="btn btn-default btn-xl page-scroll">Got it</a>
                 </div>
             </div>
         </div>
