--- a/public/info.html
+++ b/public/info.html
@@ -5,6 +5,34 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
+		<meta charset="utf-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
+	    <meta name="description" content="">
+	    <meta name="author" content="">
+
+	    <title>Jamocracy - Send the Jams</title>
+
+	    <!-- Bootstrap Core CSS -->
+	    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+
+	    <!-- Custom Fonts -->
+	    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+	    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+	    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+
+	    <!-- Plugin CSS -->
+	    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
+	    <!-- Custom CSS -->
+	    <link rel="stylesheet" href="css/creative.css" type="text/css">
+
+	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	    <!--[if lt IE 9]>
+	        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	    <![endif]-->
 	</head>
 	<body>
 		<div class="container">
@@ -24,7 +52,8 @@
 						<select class="form-control" id="playlist-select" name="existingPlaylistId">
 						</select>
 					</div>
-					<button type="submit" class="btn btn-lg btn-success btn-block">Submit</button>
+					<button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
+					
 				</form>
 			</div>
 		</div>
