--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             <div class="header-content-inner">
                 <h1>Jamocracy</h1>
                 <br><br>
-                <p>If you've never used Jamocracy before click 'Learn More' and we'll quickly show you how it works, otherwise go ahead and make your playlists collaberative</p>
+                <p>If you've never used Jamocracy before click 'Learn More' and we'll quickly show you how it works, otherwise go ahead and make your playlists collaborative</p>
                 <a href="/login" class="btn btn-primary btn-xl page-scroll">Build Playlist</a><br><br><br>
                 <a href="#firstStop" class="btn btn-primary btn-xl page-scroll">Learn More</a>
             </div>
