Added an analytics folder

--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-check wow text-primary"></i>
-                        <h3>Receive Connection Messasge</h3>
+                        <h3>Receive Connection Message</h3>
                         <p class="text-muted">We'll text you back saying you're in</p>
                     </div>
                 </div>
